[tool.poetry]
name = "algo-expert"
version = "0.1.0"
description = ""
authors = ["Arjun Bali <37790028+arjnbli@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
